Sutter Health/src/objects/SH_Level_2_Content__c.object
<CustomObject>
    <fields>
        <fullName>SH_Article_Link__c</fullName>
        <description>For Developer, Admins only</description>
        <inlineHelpText>For Developer, Admins only</inlineHelpText>
        <label>SH_ArticleID_Transform_CODE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Article_Tool_Id__c</fullName>
        <label>Article/Tool Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Article_Tool__c</fullName>
        <formula>IF(ISBLANK(SH_Article_Tool_Id__c), &apos;&apos;, 
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +SH_Article_Tool_Id__c)</formula>
        <label>Article/Tool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Background_Class__c</fullName>
        <description>Background colour will not be applicable for the Listing Type &quot;Two Column Layout&quot; .</description>
        <inlineHelpText>Background colour will not be applicable for the Listing Type &quot;Two Column Layout&quot; .</inlineHelpText>
        <label>Background Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>background-orange</fullName>
                </value>
                <value>
                    <fullName>background-cyan</fullName>
                </value>
                <value>
                    <fullName>background-white</fullName>
                </value>
                <value>
                    <fullName>background-blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Content_Image_Url__c</fullName>
        <label>Content Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Content_Image__c</fullName>
        <formula>IF(ISBLANK(SH_Content_Image_Url__c), &apos;&apos;, 
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +SH_Content_Image_Url__c)</formula>
        <label>Content Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Content_Link__c</fullName>
        <description>This field is used to store internal or external url (must be fully qualified url)</description>
        <inlineHelpText>This field is used to store internal or external url (must be fully qualified url)</inlineHelpText>
        <label>Content Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Content_Target__c</fullName>
        <description>This field is used to open the link in same tab (_self) or in different tab (_blank)</description>
        <inlineHelpText>This field is used to open the link in same tab (_self) or in different tab (_blank)</inlineHelpText>
        <label>Content Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>_self</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>_blank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Article</fullName>
                </value>
                <value>
                    <fullName>Tool</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SH_Is_Preview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Preview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH_Is_Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH_Listing_Type__c</fullName>
        <description>How to show this item on community site.</description>
        <label>Listing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Simple List View (Full Width)</fullName>
                </value>
                <value>
                    <fullName>Two Column Layout</fullName>
                </value>
                <value>
                    <fullName>List With Left Image</fullName>
                </value>
                <value>
                    <fullName>List With Right Image</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Order_of_Display__c</fullName>
        <label>Order of Display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH_Production_Id__c</fullName>
        <description>stores the production id for the article/Tool (should be removed after copying value in SH_Article_Link__c field and deployment on production)</description>
        <inlineHelpText>stores the production id for the article/Tool</inlineHelpText>
        <label>Production Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Show_on_Top_links__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Top links</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH_Sub_Menu_Item__c</fullName>
        <label>Sub Menu Item</label>
        <referenceTo>SH_Sub_Menu_Item__c</referenceTo>
        <relationshipLabel>Level 2 Contents</relationshipLabel>
        <relationshipName>Level_2_Contents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Level 2 Content</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Level 2 Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Level 2 Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Article_ToolId_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK(SH_Article_Tool_Id__c), 
OR(ISPICKVAL(SH_Content_Type__c, &apos;Article&apos;), ISPICKVAL(SH_Content_Type__c, &apos;Tool&apos;)))</errorConditionFormula>
        <errorDisplayField>SH_Article_Tool_Id__c</errorDisplayField>
        <errorMessage>Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Content_Link_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( SH_Content_Link__c ), ISPICKVAL(SH_Content_Type__c, &apos;Other&apos;))</errorConditionFormula>
        <errorDisplayField>SH_Content_Link__c</errorDisplayField>
        <errorMessage>Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Image_required_on_publish_preview</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 OR(
  SH_Is_Preview__c,  SH_Is_Publish__c 
 ),
 ISBLANK(SH_Content_Image_Url__c),
 OR(
    ISPICKVAL(SH_Listing_Type__c , &apos;List With Left Image&apos;),
    ISPICKVAL(SH_Listing_Type__c , &apos;List With Right Image&apos;)
  )
)</errorConditionFormula>
        <errorMessage>Please upload image before publish/preview.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_ArticleTool_ID</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK(SH_Article_Tool_Id__c), false, 
OR(NOT(BEGINS(SH_Article_Tool_Id__c , &apos;kA&apos;)), NOT(LEN(SH_Article_Tool_Id__c ) == 15)) 
)</errorConditionFormula>
        <errorDisplayField>SH_Article_Tool_Id__c</errorDisplayField>
        <errorMessage>Invalid Article/Tool ID</errorMessage>
    </validationRules>
</CustomObject>